--- a/arrow.html
+++ b/arrow.html
@@ -56,7 +56,7 @@
         </div> -->
     </div>
 
-    <script src="countour/demo.js"></script>
+    <script src="countour/demoMap.js"></script>
     <script src="arrow/leaflet-arrows.js"></script>
 
     <script>
