Update webgis contour map.html

--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <!-- <script src="contourmap/L.LabelTextCollision.js"></script> -->
 
     <script src="contourmap/leaflet.latlng-graticule.js"></script>
@@ -135,14 +136,14 @@
 
     <script
         src="https://webapi.amap.com/maps?v=1.4.15&key=106280a19d653ff6eaf4d8075e348736&plugin=AMap.DistrictSearch"></script>
-    <script src="contourmap/kriging0.js"></script>
+    <script src="contourmap/kriging3.js"></script>
 
     <script src="https://unpkg.com/gcoord/dist/gcoord.js"></script>
     <script src="contourmap/leaflet.mapCorrection.js"></script>
 
     <script src="contourmap/L.KML.js"></script>
     <script src="contourmap/CreateMap.js"></script>
-    <script src="contourmap/Contourmap.js"></script>
+    <script src="contourmap/Contourmap copy.js"></script>
     <script src="contourmap/CreateCoordMap.js"></script>
     <script src="contourmap/CreatePopupMap.js"></script>
 
