--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,44 +8,53 @@
     <title>Website of JET</title>
     <link rel="stylesheet" href="index/css/index.css">
     <style>
-        *{  
-            margin: 0px;  
-            padding: 0px;  
-        }  
-        video{  
-            position: fixed;  
-            right: 0px;  
-            bottom: 0px;  
-            min-width: 100%;  
-            min-height: 100%;  
-            height: auto;  
-            width: auto;  
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+
+        video {
+            position: fixed;
+            right: 0px;
+            bottom: 0px;
+            min-width: 100%;
+            min-height: 100%;
+            height: auto;
+            width: auto;
             /*加滤镜*/
             /*filter: blur(15px); //背景模糊设置 */
-            /*-webkit-filter: grayscale(100%);*/  
-            /*filter:grayscale(100%); //背景灰度设置*/  
-            z-index:-11
-        }  
-        source{  
-            min-width: 100%;  
-            min-height: 100%;  
-            height: auto;  
-            width: auto;  
-        } 
+            /*-webkit-filter: grayscale(100%);*/
+            /*filter:grayscale(100%); //背景灰度设置*/
+            z-index: -11
+        }
+
+        source {
+            min-width: 100%;
+            min-height: 100%;
+            height: auto;
+            width: auto;
+        }
     </style>
 </head>
+
 <body>
-<!-- <body background="res/bank.jpg" style=" background-repeat:no-repeat; background-size:100% 100%; background-attachment: fixed;"> -->
-<!-- <video autoplay loop muted><source src="res/A.mp4" type="video/mp4"/></video> -->
-<h1 style="text-align: center; background-color: rgb(53, 108, 211);">Website of JET</h1>
-<a href="Gaussian projection coordinate conversion.html" style="top: 5%;">高斯投影正反算坐标转换</a>
-<a href="transform.html" style="top: 15%;">大地坐标度分秒转换</a>
-<a href="auto contours.html" style="top: 25%;">自动等值轴刻度颜色图例</a>
-<a href="webgis contour map origin.html" style="top: 35%;">等值线图在线渲染展示系统</a>
-<a href="webgis contour map.html" style="top: 45%;">等值线图在线渲染展示系统2</a>
-<a href="Openstreet Rigon.html" style="top: 55%;">Open Street 行政区域查询</a>
-<a href="arrow.html" style="top: 65%;">矢量箭头图</a>
-<a href="position2coord/index.html" style="top: 75%;">绘图保存</a>
-<a href="location2coord.html" style="top: 85%;">地址转坐标</a>
+    <!-- <body background="res/bank.jpg" style=" background-repeat:no-repeat; background-size:100% 100%; background-attachment: fixed;"> -->
+    <!-- <video autoplay loop muted><source src="res/A.mp4" type="video/mp4"/></video> -->
+    <h1 style="text-align: center; background-color: rgb(53, 108, 211);">Website of JET</h1>
+    <div>
+        <a href="Gaussian projection coordinate conversion.html" style="top: 5%; left: 30%;">高斯投影正反算坐标转换</a>
+        <a href="transform.html" style="top: 15%; left: 30%;">大地坐标度分秒转换</a>
+        <a href="auto contours.html" style="top: 25%; left: 30%;">自动等值轴刻度颜色图例</a>
+        <a href="webgis contour map origin.html" style="top: 35%; left: 30%;">等值线图在线渲染展示系统</a>
+        <a href="webgis contour map.html" style="top: 45%; left: 30%;">等值线图在线渲染展示系统2</a>
+        <a href="Openstreet Rigon.html" style="top: 55%; left: 30%;">Open Street 行政区域查询</a>
+        <a href="arrow.html" style="top: 65%; left: 30%;">矢量箭头图</a>
+        <a href="position2coord/index.html" style="top: 75%; left: 30%;">绘图保存</a>
+        <a href="location2coord.html" style="top: 85%; left: 30%;">地址转坐标</a>
+    </div>
+    <div>
+        <a href="TidePredictChina.html" class="b" style="top: 5%; left: 70%;">潮位预报</a>
+    </div>
 </body>
+
 </html>
