--- a/TidePredictChina.html
+++ b/TidePredictChina.html
@@ -6,23 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="TidePredict/dygraph.min.js"></script>
+    <link rel="stylesheet" href="TidePredict/dygraph.css" />
 </head>
 
 <body>
     <!-- <textarea name="" id="text" cols="30" rows="10"></textarea> -->
     <h2>基于调和常数的潮位预报系统</h2>
-    <div>
-
+    <!-- <div id="text" style="float: right; width:15%; top: 20px;"></div> -->
+    <textarea  id="text" cols="30" rows="40" style="float: right; width:250px; height:100%; top: 0px; resize: none;"></textarea>
+    <div style="width: 600px;">
         <p>开始日期 <input type="date" name="" id="t1" value="2021-12-01"> <input type="number" name="" id="h1" value="0"> 时
         </p>
         <p>结束日期 <input type="date" name="" id="t2" value="2021-12-02"> <input type="number" name="" id="h2" value="0"> 时
         </p>
-        <p>时间步长 <input type="number" name="" id="s0" value="60"> 分钟</p>
-        <button onclick="run()">预报潮位</button>
+        <p>时间步长 <input type="number" name="" id="s0" value="30"> 分钟</p>
+        <p>潮位站名 <input type="text" name="" id="site" value="大长山岛"></p>
+        <p>
+            <label style="color: blue;">分潮&emsp;</label>
+            <label style="color: blue;"> 振幅(m)&emsp;</label>
+            <label style="color: blue;">迟角(°)</label>
+            <br>
+            <textarea id="canshu" cols="25"rows="8" style="resize: none;">M2	1.31	265&#10;S2	0.43	321&#10;K1	0.34	342&#10;O1	0.24	304</textarea>
+        </p>
+        <button onclick="run()">预报潮位</button>        
     </div>
-    <div id="text"></div>
+
+    <div id="graphdiv" style="width: 50%;"></div>
+
+
+
     <script src="TidePredict/tide-predictor.js"></script>
     <script>
+        var now = new Date();
+        document.getElementById('t1').value = format(now, "yyyy-MM-dd");
+        document.getElementById('t2').value = format(new Date(now.getTime() + 1000 * 60 * 60 * 24), "yyyy-MM-dd");
+
         function run() {
             // var time_0 = new Date("2021-12-12 00:00");
             // var time_1 = new Date("2021-12-14 00:00");
@@ -30,55 +49,131 @@
             var time_1 = new Date(document.getElementById('t2').value + ' 00:00');
             // var time_0 = new Date("2021-12-12 00:00 GMT+0800");
             // var time_1 = new Date("2021-12-14 00:00 GMT+0800");
-            var time_step = document.getElementById('s0').value;
-            var phaseKey = 'phase_local';
+            var time_step = Number(document.getElementById('s0').value);
+            var phaseKey = 'phase';
             // var phaseKey = 'phase_GMT';
             console.log("time start:", time_0);
             console.log("time  end :", time_1);
-            var text0 = [];
 
-            var constituents = [
-                {
-                    "name": "M2",
-                    "amplitude": 0.5,
-                    "phase_local": 270.1,
-                },
-                {
-                    "name": "S2",
-                    "amplitude": 0.204,
-                    "phase_local": 258.5,
-                },
-                {
-                    "name": "K1",
-                    "amplitude": 0.332,
-                    "phase_local": 86.6,
-                },
-                {
-                    "name": "O1",
-                    "amplitude": 0.213,
-                    "phase_local": 80.2,
-                }
-            ];
+            var text0 = [];
+            var textstr = '';
+            var constituents = tableStringToArr('name amplitude	phase\n' + document.getElementById('canshu').value).objArr;
 
             var time_j = time_0;
 
             while (time_j <= time_1) {
-                const waterLevel = tidePredictor(constituents
-                    , {
-                        phaseKey: phaseKey,
-                    }
-                ).getWaterLevelAtTime({
+                var waterLevel = tidePredictor(constituents, { phaseKey: phaseKey }).getWaterLevelAtTime({
                     time: time_j,
                 });
-                console.log(waterLevel.time, waterLevel.level);
-                text0.push(waterLevel.time + ' ' + waterLevel.level);
-
+                text0.push(formatDateTime(waterLevel.time) + ' ' + waterLevel.level.toFixed(2));
+                textstr = textstr + formatDateTime(waterLevel.time) + ',' + waterLevel.level.toFixed(4) + '\n';
                 time_j.setMinutes(time_j.getMinutes() + time_step)
+                // time_j = new Date(time_j.setMinutes(time_j.getMinutes() + time_step));
             };
-            // console.log(text0);
-            document.getElementById('text').innerHTML = text0.join('<br>');
+
+            // document.getElementById('text').innerHTML = text0.join('<br>');
+            textstr = "Date,WaterLevel\n" + textstr;
+            console.log(textstr);
+            document.getElementById('text').innerHTML =textstr;
+            // document.getElementById('text').innerHTML = text0.join('\n \t');
+
+            var g = new Dygraph(
+                document.getElementById("graphdiv"),  // containing div
+                textstr,
+                {
+                    // legend: 'always',
+                    title: document.getElementById('site').value+'潮位预测曲线',
+                    // showRoller: true,
+                    // rollPeriod: 14,
+                    // customBars: true,
+                    ylabel: '潮汐高度 (m)',
+                    xlabel: '时刻 (t)',
+                }
+            );
 
         }
+
+
+        var formatDateTime = function (date) {
+            var y = date.getFullYear();
+            var m = date.getMonth() + 1;
+            m = m < 10 ? ('0' + m) : m;
+            var d = date.getDate();
+            d = d < 10 ? ('0' + d) : d;
+            var h = date.getHours();
+            h = h < 10 ? ('0' + h) : h;
+            var minute = date.getMinutes();
+            minute = minute < 10 ? ('0' + minute) : minute;
+            var second = date.getSeconds();
+            second = second < 10 ? ('0' + second) : second;
+            return y + '-' + m + '-' + d + ' ' + h + ':' + minute + ':' + second;
+        };
+
+
+        //-------------------------将标准时间转换成字符串格式2015-03-12 12:00:00
+        console.log('当前时间:', format(new Date(), "yyyy-MM-dd hh:mm:ss"));
+
+        function format(date, fmt) {
+            var o = {
+                "M+": date.getMonth() + 1, //月份
+                "d+": date.getDate(), //日
+                "h+": date.getHours(), //小时
+                "m+": date.getMinutes(), //分
+                "s+": date.getSeconds(), //秒
+                "q+": Math.floor((date.getMonth() + 3) / 3), //季度
+                "S": date.getMilliseconds() //毫秒
+            };
+            if (/(y+)/.test(fmt)) {
+                fmt = fmt.replace(RegExp.$1, (date.getFullYear() + "").substr(4 - RegExp.$1.length));
+            }
+            for (var k in o) {
+                if (new RegExp("(" + k + ")").test(fmt)) {
+                    fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ?
+                        (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+                }
+            }
+            return fmt;
+        }
+
+        //-------------------------将2015-03-12 12:00 转换成标准时间
+        console.log(parserDate("2015-03-19 12:00:00"));
+
+        function parserDate(date) {
+            var t = Date.parse(date);
+            if (!isNaN(t)) {
+                return new Date(Date.parse(date.replace(/-/g, "/")));
+            } else {
+                return new Date();
+            }
+        };
+
+        //---------------------------------字符串转json数组、json对象
+        function tableStringToArr(text) {
+            text = text.trim();//去除首尾空白
+            var yyy = text.split(/[\n]/); //按行分割
+            var shuju = [];
+            for (var i = 0; i < yyy.length; i++) {
+                shuju[i] = yyy[i].trim().split(/,|，|\s+/);//去除首尾空白后，行内逗号、空格分割
+            };
+            var shuju2 = []; var shuliang = 0;
+            for (var i = 1; i < shuju.length; i++) {
+                var Obj = {};
+                for (var j = 0; j < shuju[0].length; j++) {
+                    Obj[shuju[0][j]] = Number(shuju[i][j]) + '' !== NaN + '' ? Number(shuju[i][j]) : shuju[i][j];
+                }
+                shuju2.push(Obj); shuliang += shuju[i].length;
+            };
+            if (shuliang !== (shuju.length - 1) * shuju[0].length) { alert("监测到非法字符，可能是空格或者逗号，请检查数据后再试") };
+            var lieName = [];
+            for (var key in shuju2[0]) { lieName.push(key) };
+            return {
+                tableArr: shuju,
+                objArr: shuju2,
+                lieName: lieName
+            };
+        }
+
+
     </script>
 </body>
 
