--- a/transform.html
+++ b/transform.html
@@ -41,7 +41,7 @@
         <textarea id="xinshuju2" rows="30" style="width: 22%; float: left; margin-right:6px; resize: none;"></textarea>
         <textarea id="xinshuju3" rows="30" style="width: 22%; float: left; margin-right:6px; resize: none;"></textarea>
     </p>
-    <a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=https://jet-nmemc.github.io/transform.html&digit=style/plain/15/&reloads=0" alt="reliablecounter.com" title="reliablecounter.com" border="0"></a><br /><a href="http://relia" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">reliablecounter blog</a>
+    <div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3247041&c=9741436" alt="AmazingCounters.com"></a></div>
 </body>
 <script src="transform/dufenmiao.js"></script>
 
