--- a/transform.html
+++ b/transform.html
@@ -41,8 +41,8 @@
         <textarea id="xinshuju2" rows="30" style="width: 22%; float: left; margin-right:6px; resize: none;"></textarea>
         <textarea id="xinshuju3" rows="30" style="width: 22%; float: left; margin-right:6px; resize: none;"></textarea>
     </p>
-    <p style="text-align: center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3247041&amp;c=9741436" alt="AmazingCounters.com"/></a></p>
-
+    <p><a href="http://www.amazingcounters.com"><img  src="http://cc.amazingcounters.com/counter.php?i=3247041&amp;c=9741436" alt="AmazingCounters.com"/></a></p>
+    <div><a href="http://www.amazingcounters.com"><img  src="http://cc.amazingcounters.com/counter.php?i=3247041&c=9741436" alt="AmazingCounters.com"></a></div>
 </body>
 <script src="transform/dufenmiao.js"></script>
 
